--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
         "symfony/lock": "^3.4"
     },
     "scripts": {
+        "post-install-cmd": [
+            "chmod +x ./dev_scripts/hooks/pre-commit && chmod +x ./dev_scripts/setup.sh && ./dev_scripts/setup.sh"
+        ],
         "post-update-cmd": [
             "chmod +x ./dev_scripts/hooks/pre-commit && chmod +x ./dev_scripts/setup.sh && ./dev_scripts/setup.sh"
         ]
