--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -3,7 +3,7 @@
 $finder = PhpCsFixer\Finder::create()
 	->name('/.+\.(php|inc|class|css|js|xaml|xml|html)$/')
 	->exclude(array('lib/composer','dev_vendor','MANIFEST'))
-    ->in(__DIR__)
+    ->in(__DIR__ . '/themes')
 ;
 
 return PhpCsFixer\Config::create()
